bk_ida/sjengida/g2/initialize_eval
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/initialize_eval/src/eval.c:855:1: error: use of undeclared identifier 'byte_62189F'
byte_62189F[v14] = pre_b_tropism[v18]; 
^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/initialize_eval/src/obj/eval.o] Error 1
